--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ numpy = "^1.21.0"
 appdirs = "^1.4.4"
 Flask = "^2.0.1"
 scipy = "^1.9.0"
+mysql-connector = "^2.2.9"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
