--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "moirai"
-version = "1.3.25"
+version = "1.3.26"
 description = "Digital Control Manager Backend"
-authors = ["Álan Crístoffer <acristoffers@gmail.com>"]
+authors = ["Álan Crístoffer <acristoffers@startmail.com>"]
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/acristoffers/moirai"
