--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,16 +12,16 @@ keywords = ["digital control manager"]
 moirai = 'moirai.moirai:start'
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.12"
-ahio = "^1.0.31"
-cheroot = "^8.5.2"
-python-dateutil = "^2.8.1"
-pymongo = "^3.11.4"
-numpy = "^1.21.0"
+Flask = "^2.3.3"
+ahio = "^1.0.33"
 appdirs = "^1.4.4"
-Flask = "^2.0.1"
-scipy = "^1.9.0"
-mysql-connector = "^2.2.9"
+cheroot = "^10.0.0"
+mysql-connector-python = "^8.0.33"
+numpy = "^1.26.2"
+pymongo = "^4.6.1"
+python = ">=3.9,<3.12"
+python-dateutil = "^2.8.2"
+scipy = "^1.11.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
